tests/NormalTests/paczka2/big_fuzzy/82692463.err
Error in line 6: j7mgR1s81j A763 25,3
Error in line 9: A321 A701 45,9
Error in line 16: j7mgR1s81j A321 190,6
Error in line 25: S8iLToz2NM A321 21,7
Error in line 27: S8iLToz2NM A701 4,6
Error in line 47: j7mgR1s81j A808 49,1
Error in line 52: A321 A701 37,1
Error in line 40: S8iLToz2NM A763 93,2
Error in line 48: j7mgR1s81j A321 71,9
Error in line 67: tk5 A701 8,2
Error in line 77: 1cLYC9I7 A763 85,1
Error in line 81: S8iLToz2NM A763 54,6
Error in line 83: S8iLToz2NM A808 24,3
Error in line 90: FWzSjYsf A763 88,0
Error in line 91: FWzSjYsf A808 94,1
Error in line 96: S8iLToz2NM A321 140,7
Error in line 104: 1cLYC9I7 A701 10,7
Error in line 106: tk5 A763 65,0
Error in line 109: XDdKMWdaO A808 87,6
Error in line 118: A321 A321 52,6
Error in line 125: XDdKMWdaO A808 93,3
Error in line 124: tk5 A808 122,4
Error in line 145: FWzSjYsf A808 16,3
Error in line 147: tk5 A321 12,1
Error in line 144: j7mgR1s81j A808 91,4
Error in line 141: S8iLToz2NM A763 32,6
Error in line 152: j7mgR1s81j A763 56,1
Error in line 165: S8iLT¶z2NM A321 25,7
Error in line 167: j7mgR1s81j A321 146,05
Error in line 171: S8iLToz2NM A321 44,7
Error in line 164: j7mgR1s81j A321 61,8
Error in line 192: A321 A808 89,4
Error in line 186: XDdKMWdaO A808 7,2
Error in line 199: A321 A763 48,6
Error in line 202: XDdKMWdaO A321 61,7
Error in line 210: S8iLToz2NM A808 74,4
Error in line 211: 1cLYC9I7 A763 70,2
Error in line 226: S8iLToz2NM A763 237,4
Error in line 240: tk5 A763 41,5
Error in line 242: tk5 A701 41,1
Error in line 243: tk5 A321 7,1
Error in line 246: tk5 A808 40,4
Error in line 245: j7mgR1s81j A701 68,6
